fix: improve vertical spacing of QA-page in accordance to footer

--- a/static/css/SCSS/QA.scss
+++ b/static/css/SCSS/QA.scss
@@ -33,7 +33,7 @@
 #qa-content {
   transition: all 0.5s ease;
   padding-bottom: 1.5rem;
-  min-height: 86vh;
+  min-height: 88vh;
 }
 
 @media only screen and (max-width: 767px) {
@@ -136,7 +136,7 @@
   transition: left 0.5s ease;
   z-index: 999;
   height: 100%;
-  padding-bottom: 14vh;
+  padding-bottom: 12vh;
 }
 
 #qa-sidebar-overlay {
